src/objects/Buyer_Information__c.object
<CustomObject>
    <fields>
        <fullName>Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Buyer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Person</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Unit_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Unit Information</relationshipLabel>
        <relationshipName>Buyer_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deposit Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exchanged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Lot__c</fullName>
        <label>Unit/Lot</label>
        <referenceTo>Unit_Lot_Information__c</referenceTo>
        <relationshipName>Unit_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <label>Unit Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Buyer Information</label>
    <nameField>
        <displayFormat>BN-{000000}</displayFormat>
        <label>Buyer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyer Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>